changed App Name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://harishkumarallavarapu.github.io/ReactProjects/",
-  "name": "to-do_app",
+  "name": "monster-rolodex_app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
